# Zadanie3

./: CMakeCache.txt  CMakeLists.txt  MergeSort.h  MergeSortTest.cpp  main.cpp
MergeSortApp/: MergeSort.cpp  MergeSort.h  MergeSortApp.sln  MergeSortApp.vcxproj  MergeSortApp.vcxproj.filters  main.cpp
MergeSortApp/MergeSortApp/x64/Debug/: MergeSortApp.exe.recipe  MergeSortApp.ilk  vc143.idb
MergeSortTest/: MergeSort.cpp  MergeSort.h  MergeSortTest.sln  MergeSortTest.vcxproj  MergeSortTests.cpp  main.cpp  pch.cpp
MergeSortTest/MergeSortTest/x64/Debug/: MergeSortTest.exe.recipe  MergeSortTest.vcxproj.FileListAbsolute.txt
MergeSortTests/: MergeSortTests.vcxproj  pch.h  test.cpp
MergeSortTests/x64/Debug/: MergeSortTests.exe.recipe  MergeSortTests.vcxproj.FileListAbsolute.txt
MergeSortTestsConsole/: MergeSortTestsConsole.vcxproj
MergeSortTestsConsole/x64/Debug/: MergeSortTestsConsole.exe.recipe  MergeSortTestsConsole.vcxproj.AssemblyReference.cache  MergeSortTestsConsole.vcxproj.FileListAbsolute.txt
Zadanie/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  MergeSort.cpp  MergeSort.h  MergeSortTests.cpp  Package.appxmanifest  Zadanie.sln  Zadanie.vcxproj  Zadanie.vcxproj.filters  main.cpp  test.cpp
Zadanie/Generated Files/: App.g.h  App.g.hpp  App.xaml  MainPage.g.h  MainPage.g.hpp  MainPage.xaml  XamlTypeInfo.Impl.g.cpp  XamlTypeInfo.g.cpp
Zadanie/Zadanie/x64/Debug/: XamlSaveStateFile.xml  (+5 more)
Zadanie/x64/Debug/: MergeSortTests.exe.gta.testdurations  MergeSortTestsConsole.exe.gta.testdurations
googletest/: CMakeLists.txt
(+62 files in other folders)
